# worldcupxiaohongshu

./: WORLD_CUP_XHS_WORKFLOW.md
worldcup/: .env.example  .gitignore  README.md  config.example.yaml  config.yaml  main.py  pyproject.toml
worldcup/data/: fixtures.example.json  match_intelligence.example.json
worldcup/data/backtest/: llm_backtest_results_hybrid_poisson_v1_20.csv  llm_backtest_results_prompt_v1_20.csv  llm_backtest_results_prompt_v2_20.csv  llm_backtest_results_prompt_v3_20.csv  llm_backtest_results_prompt_v4_score_20.csv  llm_backtest_summary_prompt_v1_20.json  llm_backtest_summary_prompt_v2_20.json  llm_backtest_summary_prompt_v3_20.json  llm_backtest_summary_prompt_v4_score_20.json
worldcup/data/fixtures/: world_cup_2026_fixtures.csv
worldcup/data/processed/: historical_matches_clean.csv  world_cup_2026_features_train.csv  world_cup_2026_test.csv  world_cup_2026_train.csv  world_cup_2026_validation.csv
worldcup/data/raw/: world_cup_2026_matches.csv
worldcup/src/: build_world_cup_fixtures.py  compare_backtests.py  current_team_feature_builder.py  football_data_client.py  generate_world_cup_reports.py  historical_match_loader.py  llm_backtester.py  llm_match_predictor.py  match_feature_engineering.py  open_meteo_client.py  scoreline_predictor.py  validate_world_cup_dataset.py  world_cup_teams.py
worldcup/src/huishou/: run.py  test_consensus.py  test_llm_api.py  test_pipeline.py  test_report.py  test_structured_data.py
worldcup/src/world_cup_forecast.egg-info/: PKG-INFO  (+4 more)
worldcup/tests/: test_refresh_pipeline.py  test_world_cup_dataset.py
(+738 files in other folders)
